# create-smithery

./: .gitignore  README.md  constants.ts  git.ts  index.test.ts  index.ts  loader.ts  package-lock.json  package.json  pnpm-lock.yaml  smithery.ts  tsconfig.json
.github/workflows/: build.yml  publish-no-patch.yml  publish.yml
examples/basic-server/src/: index.ts
examples/local-filesystem/: package.json
examples/local-filesystem/src/: index.ts
js/: package.json
js/scaffold/src/: index.ts
my-smithery-test/: package-lock.json
python/: .gitignore  pyproject.toml
python/create_smithery/: __main__.py
python/scaffold/: pyproject.toml
python/scaffold/src/: main.py
scaffold/: package-lock.json  package.json
scaffold/src/: index.ts
src/: index.ts  tsconfig.json
static/: package.json
static/src/: index.ts
utils/: git.ts  install.ts  loader.ts  smithery-ascii.ts
