[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smithery-scaffold-py"
version = "0.0.1"
authors = [
  { name="Anirudh Kamath", email="anirudh@smithery.ai" },
]
description = "A scaffold for a smithery project"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "modelcontextprotocol",
    "zod",
]

[project.scripts]
dev = "src.main:start"
